# office_chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  manage.py  pyproject.toml
app/: background_main.py  main.py
app/api/v1/: router.py
app/api/v1/auth/: auth_routes.py
app/api/v1/chat/: chat_routes.py
app/api/v1/upload/: upload_routes.py
app/api/v1/user/: user_routes.py
app/core/: config.py  exception_utils.py  security.py
app/db/: database.py
app/dependencies/: authentication.py  client_ip_provider.py  current_user.py  email_sender.py  limiter.py  rate_limit_route.py  utils.py
app/models/: __init__.py
app/models/chat/: chat_message_mode.py  chat_message_model.py  chat_model.py  chat_user_mode.py  chat_user_model.py
app/models/user/: user_modeL.py  user_session_model.py
app/schemas/: __init__.py  base.py  pagination.py
app/schemas/auth/: auth_schema.py  token_schema.py
app/schemas/chat/: chat_schema.py
app/schemas/message/: message_schema.py
app/schemas/user/: user_schema.py  user_session_schema.py
app/services/: __init__.py
app/services/auth/: auth_service.py
app/services/bucket/: base.py  factory.py  minio_service.py
app/services/chat/: chat_message_service.py  chat_service.py  connection_manager.py
app/services/upload/: upload_service.py
app/services/user/: user_service.py  user_session_service.py
app/templates/: password_reset.html
app/users/: admin.py  apps.py  urls.py
app/users/domain/: users_domain.py
app/users/migrations/: 0001_initial.py
app/users/models/: users_model.py
app/users/repositories/: users_repository.py
app/users/serializers/: users_serializer.py
app/users/services/: users_service.py
app/users/tests/: users_tests.py
app/users/views/: users_views.py
config/: asgi.py  settings.py  urls.py  wsgi.py
core/models/: base_model.py
migrations/: env.py
templates/: 403.html  404.html  500.html  appbar.html  audit_logs.html  change_password.html  chat_modal.html  chats.html  create_group.html  dashboard.html  email_verification.html  email_verified.html  home.html  login.html  modal_confirm.html  notifications.html  notifications_details.html  password_reset_confirm.html  profile.html  register.html  reset_password.html  terms_accept.html  upload_file.html  users.html
