[project]
name = "office-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "django-environ>=0.13.0",
    "djangorestframework>=3.16.1",
    "ruff>=0.15.4",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

# -----------------------
# Ruff config
# -----------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "W", # pycodestyle/pyflakes
    "I", # isort (imports)
    "UP", # pyupgrade
    "B", # bugbear
    "SIM", # simplify
    "RUF", # ruff rules
]
ignore = ["E501"]

[tool.setuptools.packages.find]
include = ["app*", "core*", "config*"]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
force-sort-within-sections = true
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"migrations/**/*.py" = ["E402", "F401", "SIM103"]
"tests/**/*.py" = ["S101"]
"pyproject.toml" = ["S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
